Cleaned code using Eclipse.