@@ -142,8 +142,8 @@ import ptolemy.vergil.basic.export.web.WebExporter;
  * @Pt.AcceptedRating Red (eal)
  */
 @SuppressWarnings("serial")
-public class ExportHTMLAction extends AbstractAction implements HTMLExportable,
-WebExporter {
+public class ExportHTMLAction extends AbstractAction
+        implements HTMLExportable, WebExporter {
 
     /** Create a new action to export HTML.
      *  @param basicGraphFrame The Vergil window to export.
@@ -187,8 +187,8 @@ WebExporter {
                 defaultParameters = defaultParameterList.get(0);
             }
             EditParametersDialog dialog = new EditParametersDialog(
-                    _basicGraphFrame, defaultParameters, "Export to Web for "
-                            + model.getName());
+                    _basicGraphFrame, defaultParameters,
+                    "Export to Web for " + model.getName());
             if (!dialog.buttonPressed().equals("Commit")) {
                 return;
             }
@@ -214,7 +214,8 @@ WebExporter {
      *   canceling the export. True otherwise.
      */
     public static boolean copyJavaScriptFilesIfNeeded(
-            final BasicGraphFrame graphFrame, final ExportParameters parameters) {
+            final BasicGraphFrame graphFrame,
+            final ExportParameters parameters) {
         // First, if appropriate, copy needed files.
         boolean usePtWebsite = Boolean.valueOf(StringUtilities
                 .getProperty("ptolemy.ptII.exportHTML.usePtWebsite"));
@@ -246,12 +247,12 @@ WebExporter {
 
                 if (!jsTargetDirectory.exists() && !jsTargetDirectory.mkdir()) {
                     try {
-                        MessageHandler
-                        .warning("Warning: Cannot find required JavaScript, CSS, and image files"
-                                + " for lightbox effect implemented by the fancybox"
-                                + " package. Perhaps your Ptolemy II"
-                                + " installation does not include them."
-                                + " Will use the files on ptolemy.org.");
+                        MessageHandler.warning(
+                                "Warning: Cannot find required JavaScript, CSS, and image files"
+                                        + " for lightbox effect implemented by the fancybox"
+                                        + " package. Perhaps your Ptolemy II"
+                                        + " installation does not include them."
+                                        + " Will use the files on ptolemy.org.");
                     } catch (CancelException e) {
                         // Cancel the action.
                         return false;
@@ -280,10 +281,10 @@ WebExporter {
                                     file);
                         } catch (IOException e) {
                             try {
-                                MessageHandler
-                                .warning("Warning: failed to copy required files."
-                                        + " Use the files on ptolemy.org? "
-                                        + e.getMessage());
+                                MessageHandler.warning(
+                                        "Warning: failed to copy required files."
+                                                + " Use the files on ptolemy.org? "
+                                                + e.getMessage());
                             } catch (CancelException e1) {
                                 // Cancel the action.
                                 return false;
@@ -324,7 +325,8 @@ WebExporter {
      *   if there was a previous value, it was overwritten).
      */
     @Override
-    public boolean defineAttribute(WebAttribute webAttribute, boolean overwrite) {
+    public boolean defineAttribute(WebAttribute webAttribute,
+            boolean overwrite) {
         if (webAttribute.getContainer() != null) {
             NamedObj object = webAttribute.getContainer();
             HashMap<String, String> areaTable = _areaAttributes.get(object);
@@ -390,7 +392,8 @@ WebExporter {
      *   making the exported web page independent of the ptolemy.org site.
      */
     public static synchronized void exportToWeb(
-            final BasicGraphFrame graphFrame, final ExportParameters parameters) {
+            final BasicGraphFrame graphFrame,
+            final ExportParameters parameters) {
         try {
 
             if (parameters.directoryToExportTo == null) {
@@ -407,21 +410,19 @@ WebExporter {
                 // be overwritten.  This seems excessive because the dialog will always
                 // be shown.
                 if (indexFile.exists()) {
-                    if (!MessageHandler
-                            .yesNoQuestion("\""
-                                    + parameters.directoryToExportTo
-                                    + "\" exists and contains an index.html file. Overwrite contents?")) {
+                    if (!MessageHandler.yesNoQuestion("\""
+                            + parameters.directoryToExportTo
+                            + "\" exists and contains an index.html file. Overwrite contents?")) {
                         MessageHandler.message("HTML export canceled.");
                         return;
                     }
                 }
                 if (!parameters.directoryToExportTo.isDirectory()) {
-                    if (!MessageHandler
-                            .yesNoQuestion("\""
-                                    + parameters.directoryToExportTo
-                                    + "\" is a file, not a directory. Delete the file named \""
-                                    + parameters.directoryToExportTo
-                                    + "\" and create a directory with that name?")) {
+                    if (!MessageHandler.yesNoQuestion("\""
+                            + parameters.directoryToExportTo
+                            + "\" is a file, not a directory. Delete the file named \""
+                            + parameters.directoryToExportTo
+                            + "\" and create a directory with that name?")) {
                         MessageHandler.message("HTML export canceled.");
                         return;
                     }
@@ -496,7 +497,7 @@ WebExporter {
     public static void openRunAndWriteHTML(final BasicGraphFrame graphFrame,
             final ExportParameters parameters, final File indexFile,
             final Writer writer, final boolean waitForCompletion)
-                    throws IllegalActionException {
+            throws IllegalActionException {
         if (graphFrame == null) {
             throw new IllegalActionException(
                     "Cannot export without a graphFrame.");
@@ -505,8 +506,8 @@ WebExporter {
         final Set<Tableau> tableauxToClose = new HashSet<Tableau>();
         if (parameters.openCompositesBeforeExport) {
             NamedObj model = graphFrame.getModel();
-            Effigy masterEffigy = Configuration.findEffigy(graphFrame
-                    .getModel());
+            Effigy masterEffigy = Configuration
+                    .findEffigy(graphFrame.getModel());
             if (model instanceof CompositeEntity) {
                 // graphFrame.getModel() might return a
                 // PteraController, which is not a CompositeActor.
@@ -563,23 +564,22 @@ WebExporter {
                                     Configuration configuration = graphFrame
                                             .getConfiguration();
                                     try {
-                                        URL indexURL = new URL(indexFile
-                                                .toURI().toURL().toString()
+                                        URL indexURL = new URL(indexFile.toURI()
+                                                .toURL().toString()
                                                 + "#in_browser");
                                         configuration.openModel(indexURL,
                                                 indexURL,
                                                 indexURL.toExternalForm(),
                                                 BrowserEffigy.staticFactory);
                                     } catch (Throwable throwable) {
-                                        MessageHandler.error(
-                                                "Failed to open \"" + indexFile
-                                                + "\".", throwable);
+                                        MessageHandler.error("Failed to open \""
+                                                + indexFile + "\".", throwable);
                                         throw new RuntimeException(throwable);
                                     }
                                 }
                             } catch (Exception ex) {
-                                MessageHandler.error(
-                                        "Unable to export to web.", ex);
+                                MessageHandler.error("Unable to export to web.",
+                                        ex);
                                 throw new RuntimeException(ex);
                             } finally {
                                 // Export is finally finished.
@@ -733,8 +733,8 @@ WebExporter {
                     .containedObjectsIterator();
             while (contentsIterator.hasNext()) {
                 NamedObj containedObject = contentsIterator.next();
-                exportables.addAll(containedObject
-                        .attributeList(WebExportable.class));
+                exportables.addAll(
+                        containedObject.attributeList(WebExportable.class));
             }
 
             // Then, iterate through the list of exportables and extract
@@ -814,9 +814,7 @@ WebExporter {
                 // FIXME: this absolute path is not very safe.  The
                 // problem is that we don't know where $PTII is located on
                 // the website.
-                printWriter
-                .println("<link href=\""
-                        + ssiRoot
+                printWriter.println("<link href=\"" + ssiRoot
                         + "ptolemyII/ptIIlatest/ptII/doc/default.css\" rel=\"stylesheet\" type=\"text/css\"/>");
             }
 
@@ -850,11 +848,11 @@ WebExporter {
             if (usePtWebsite) {
                 // Reference the server-side includes.
                 // toppremenu.htm includes </head>...<body>
-                printWriter
-                .println("<!--#include virtual=\"/ssi/toppremenu.htm\" -->");
+                printWriter.println(
+                        "<!--#include virtual=\"/ssi/toppremenu.htm\" -->");
                 printWriter.println("<!--#include virtual=\"toc.htm\" -->");
-                printWriter
-                .println("<!--#include virtual=\"/ssi/toppostmenu.htm\" -->");
+                printWriter.println(
+                        "<!--#include virtual=\"/ssi/toppostmenu.htm\" -->");
             } else {
                 // The Ptolemy website headers include the closing </head> and <body tag>
                 printWriter.println("</head>");
@@ -865,8 +863,8 @@ WebExporter {
                 // background color is given.
                 Color background = parameters.backgroundColor;
                 if (parameters.backgroundColor == null) {
-                    JCanvas canvas = _basicGraphFrame.getJGraph()
-                            .getGraphPane().getCanvas();
+                    JCanvas canvas = _basicGraphFrame.getJGraph().getGraphPane()
+                            .getCanvas();
                     background = canvas.getBackground();
                 }
                 String color = "#" + String.format("%02x", background.getRed())
@@ -874,8 +872,8 @@ WebExporter {
                         + String.format("%02x", background.getBlue());
 
                 printWriter.println("<body>");
-                printWriter.println("<div style=\"background-color:" + color
-                        + "\">");
+                printWriter.println(
+                        "<div style=\"background-color:" + color + "\">");
             }
 
             _printHTML(printWriter, "start");
@@ -886,16 +884,15 @@ WebExporter {
             //if (model.getContainer() != null) {
             //    System.out.println("ExportHTMLAction: name: " + model.getContainer().getName() + model.getContainer().getContainer());
             //}
-            if (linkToJNLP
-                    && ((model.getContainer() == null
-                            && model instanceof CompositeEntity
+            if (linkToJNLP && ((model.getContainer() == null
+                    && model instanceof CompositeEntity
                     // Don't include links to the .xml of class definitions
-                    && !((CompositeEntity) model).isClassDefinition()) || (model
-                            .getContainer() != null
-                            && /* Ptera */model.getContainer().getContainer() == null && model
-                            .getName().equals("_Controller")))) {
-                String linkToHelp = "<a href=\""
-                        + ssiRoot
+                    && !((CompositeEntity) model).isClassDefinition())
+                    || (model.getContainer() != null
+                            && /* Ptera */model.getContainer()
+                                    .getContainer() == null
+                            && model.getName().equals("_Controller")))) {
+                String linkToHelp = "<a href=\"" + ssiRoot
                         + "ptolemyII/ptIIlatest/ptII/doc/webStartHelp_index.htm\"><img src=\""
                         + ssiRoot
                         + "image/question.png\" alt=\"What is Web Start\"></a> (<i>Java Plug-in Required</i>)";
@@ -907,45 +904,41 @@ WebExporter {
                 StringParameter noJNLPLinkParameter = (StringParameter) model
                         .getAttribute("_noJNLPLink", StringParameter.class);
                 if (linkToJNLP && noJNLPLinkParameter != null) {
-                    System.out
-                            .println("The ptolemy.ptII.exportHTML.linkToJNLP JVM property was set, "
+                    System.out.println(
+                            "The ptolemy.ptII.exportHTML.linkToJNLP JVM property was set, "
                                     + "but the _noJNLPLink parameter was set, so this model "
                                     + model.getFullName()
                                     + " will not have a link to the JNLP version.  Typically models that don't run well, "
                                     + "like the BCVTB models have this parameter set.");
-                    printWriter
-                            .println("<!-- The model had a _noJNLPLink parameter set, so we are not "
+                    printWriter.println(
+                            "<!-- The model had a _noJNLPLink parameter set, so we are not "
                                     + "linking to the JNLP files. -->\n");
                 } else {
-                    printWriter
-                            .println("<li>For an executable version,"
-                                    + "<!-- We use the deployJava.js script so that Java "
-                                    + "will be installed if necessary -->\n"
-                                    + "<script src=\"http://www.java.com/js/deployJava.js\"></script>\n"
-                                    + "<script>\n"
-                                    + "  var dir = location.href.substring(0,location.href.lastIndexOf('/'));\n"
-                                    + "  var parentDir = dir.substring(0,dir.lastIndexOf('/')+1);\n"
-                                    + "  var url = parentDir + \""
-                                    + _sanitizedModelName
-                                    + ".jnlp\";\n"
-                                    + "  deployJava.createWebStartLaunchButton(url);\n"
-                                    + "  document.write(\" the WebStart version. "
-                                    + linkToHelp.replace("\"", "\\\"")
-                                    + "\");\n" + "</script>\n" + "<noscript>\n"
-                                    + "<a href=\"../" + _sanitizedModelName
-                                    + ".jnlp\">WebStart version</a>. \n"
-                                    + linkToHelp + "</noscript>\n" + "</li>\n");
+                    printWriter.println("<li>For an executable version,"
+                            + "<!-- We use the deployJava.js script so that Java "
+                            + "will be installed if necessary -->\n"
+                            + "<script src=\"http://www.java.com/js/deployJava.js\"></script>\n"
+                            + "<script>\n"
+                            + "  var dir = location.href.substring(0,location.href.lastIndexOf('/'));\n"
+                            + "  var parentDir = dir.substring(0,dir.lastIndexOf('/')+1);\n"
+                            + "  var url = parentDir + \"" + _sanitizedModelName
+                            + ".jnlp\";\n"
+                            + "  deployJava.createWebStartLaunchButton(url);\n"
+                            + "  document.write(\" the WebStart version. "
+                            + linkToHelp.replace("\"", "\\\"") + "\");\n"
+                            + "</script>\n" + "<noscript>\n" + "<a href=\"../"
+                            + _sanitizedModelName
+                            + ".jnlp\">WebStart version</a>. \n" + linkToHelp
+                            + "</noscript>\n" + "</li>\n");
                 }
-                printWriter
-                .println("<li>To view or save the MoML file for this model, "
-                        + "<a href=\"../"
-                        + _sanitizedModelName
-                        + ".xml\">click here</a>.</li>");
+                printWriter.println(
+                        "<li>To view or save the MoML file for this model, "
+                                + "<a href=\"../" + _sanitizedModelName
+                                + ".xml\">click here</a>.</li>");
                 if (usePtWebsite) {
                     if (_isInDomains(model)) {
-                        printWriter
-                                .println("<li>For a domain overview, "
-                                        + "<a href=\"../../../doc/\">click here</a>.</li>");
+                        printWriter.println("<li>For a domain overview, "
+                                + "<a href=\"../../../doc/\">click here</a>.</li>");
                     }
                 }
                 printWriter.println("</ul>\n" + "</div> <!-- inlineImg -->\n");
@@ -966,8 +959,8 @@ WebExporter {
             } else {
                 printWriter.println("<!-- /body -->");
                 printWriter.println("<!-- /html -->");
-                printWriter
-                .println("<!--#include virtual=\"/ssi/bottom.htm\" -->");
+                printWriter.println(
+                        "<!--#include virtual=\"/ssi/bottom.htm\" -->");
 
                 ExportHTMLAction._findToc(model);
                 //if (tocContents != "") {
@@ -1006,19 +999,18 @@ WebExporter {
                         //if (!usePtWebsite) {
                         //    upHTML = " <li><a href=\"../index.html\">Up</a></li>";
                         //} else {
-                            // Generate links to the domain docs.
-                            String domains[] = { "Continuous", "DDF", "DE",
-                                    "Modal", "PN", "Rendezvous", "SDF", "SR",
-                                    "Wireless" };
-                            StringBuffer buffer = new StringBuffer();
-                            for (int i = 0; i < domains.length; i++) {
-                                buffer.append("<li><a href=\"" + ptURL
-                                        + "ptolemy/domains/"
-                                        + domains[i].toLowerCase()
-                                        + "/doc/index.htm\">" + domains[i]
-                                        + "</a></li>");
-                            }
-                            upHTML = buffer.toString();
+                        // Generate links to the domain docs.
+                        String domains[] = { "Continuous", "DDF", "DE", "Modal",
+                                "PN", "Rendezvous", "SDF", "SR", "Wireless" };
+                        StringBuffer buffer = new StringBuffer();
+                        for (int i = 0; i < domains.length; i++) {
+                            buffer.append("<li><a href=\"" + ptURL
+                                    + "ptolemy/domains/"
+                                    + domains[i].toLowerCase()
+                                    + "/doc/index.htm\">" + domains[i]
+                                    + "</a></li>");
+                        }
+                        upHTML = buffer.toString();
                         //}
                     }
                 }
@@ -1054,8 +1046,8 @@ WebExporter {
 
                         // (cd $PTII/doc/papers/y12/designContracts; $PTII/bin/ptinvoke -Dptolemy.ptII.exportHTML.linkToJNLP=true -Dptolemy.ptII.exportHTML.usePtWebsite=true ptolemy.vergil.basic.export.ExportModel -run -whiteBackground -openComposites htm DCMotorTol.xml)
 
-                        System.out
-                        .println("Warning, key of _contents was empty?");
+                        System.out.println(
+                                "Warning, key of _contents was empty?");
                         continue;
                     }
                     // NOTE: A RESTful version of this would create a resource
@@ -1095,8 +1087,8 @@ WebExporter {
             }
             if (usePtWebsite && indexFile != null) {
                 if (!indexFile.setExecutable(true, false /*ownerOnly*/)) {
-                    System.err.println("Could not make " + indexFile
-                            + "executable.");
+                    System.err.println(
+                            "Could not make " + indexFile + "executable.");
                 }
             }
         }
@@ -1117,23 +1109,19 @@ WebExporter {
      */
     // FIXME: I don't like the hardwired version numbers here.
     // Findbugs wants this package protected and final.
-    final static String[] FILENAMES = {
-            "jquery-1.7.2.min.js",
-        "jquery.fancybox-1.3.4.pack.js",
-            "jquery.fancybox-1.3.4.css",
-        "pt-1.0.0.js",
-            "tooltipster.css",
-            "jquery.tooltipster.min.js",
-        // The ones above this line must be in exactly the order given
-        // They are referenced below by index.
-        "blank.gif", "fancybox.png", "fancybox-y.png", "fancybox-x.png",
+    final static String[] FILENAMES = { "jquery-1.7.2.min.js",
+            "jquery.fancybox-1.3.4.pack.js", "jquery.fancybox-1.3.4.css",
+            "pt-1.0.0.js", "tooltipster.css", "jquery.tooltipster.min.js",
+            // The ones above this line must be in exactly the order given
+            // They are referenced below by index.
+            "blank.gif", "fancybox.png", "fancybox-y.png", "fancybox-x.png",
             "fancy_title_right.png", "fancy_title_over.png",
-        "fancy_title_main.png", "fancy_title_left.png",
-        "fancy_shadow_w.png", "fancy_shadow_sw.png", "fancy_shadow_se.png",
-        "fancy_shadow_s.png", "fancy_shadow_nw.png", "fancy_shadow_ne.png",
-        "fancy_shadow_n.png", "fancy_shadow_e.png", "fancy_nav_right.png",
-        "fancy_nav_left.png", "fancy_loading.png", "fancy_close.png",
-    "javascript-license.htm" };
+            "fancy_title_main.png", "fancy_title_left.png",
+            "fancy_shadow_w.png", "fancy_shadow_sw.png", "fancy_shadow_se.png",
+            "fancy_shadow_s.png", "fancy_shadow_nw.png", "fancy_shadow_ne.png",
+            "fancy_shadow_n.png", "fancy_shadow_e.png", "fancy_nav_right.png",
+            "fancy_nav_left.png", "fancy_loading.png", "fancy_close.png",
+            "javascript-license.htm" };
 
     ///////////////////////////////////////////////////////////////////
     ////                         protected methods                 ////
@@ -1176,8 +1164,8 @@ WebExporter {
                         }
                         attributeString.append(key);
                         attributeString.append("=\"");
-                        attributeString.append(StringUtilities
-                                .escapeString(value));
+                        attributeString
+                                .append(StringUtilities.escapeString(value));
                         attributeString.append("\" ");
                     }
                 }
@@ -1187,8 +1175,8 @@ WebExporter {
                         + (int) location.topLeftX + ","
                         + (int) location.topLeftY + ","
                         + (int) location.bottomRightX + ","
-                        + (int) location.bottomRightY + "\"\n"
-                        + attributeString + "alt=\"" + title + "\"/>\n");
+                        + (int) location.bottomRightY + "\"\n" + attributeString
+                        + "alt=\"" + title + "\"/>\n");
             }
 
         }
@@ -1215,8 +1203,8 @@ WebExporter {
         Rectangle2D viewSize = _basicGraphFrame.getVisibleRectangle();
         JCanvas canvas = _basicGraphFrame.getJGraph().getGraphPane()
                 .getCanvas();
-        AffineTransform transform = canvas.getCanvasPane()
-                .getTransformContext().getTransform();
+        AffineTransform transform = canvas.getCanvasPane().getTransformContext()
+                .getTransform();
         double scaleX = transform.getScaleX();
         double scaleY = transform.getScaleY();
         double translateX = transform.getTranslateX();
@@ -1271,15 +1259,15 @@ WebExporter {
                         List<DefaultIconScript> defaults = model
                                 .attributeList(DefaultIconScript.class);
                         for (DefaultIconScript script : defaults) {
-                            if (script.eventType.stringValue()
-                                    .equals(eventType)
-                                    && (script.include.stringValue().equals(
-                                            include) || script.include
-                                            .stringValue()
-                                            .toLowerCase(Locale.getDefault())
-                                            .equals("all"))
-                                            && script.instancesOf.stringValue().equals(
-                                                    instancesOf)) {
+                            if (script.eventType.stringValue().equals(eventType)
+                                    && (script.include.stringValue()
+                                            .equals(include)
+                                            || script.include.stringValue()
+                                                    .toLowerCase(
+                                                            Locale.getDefault())
+                                                    .equals("all"))
+                                    && script.instancesOf.stringValue()
+                                            .equals(instancesOf)) {
                                 // Skip this default from the configuration.
                                 foundOverride = true;
                                 break;
@@ -1297,12 +1285,12 @@ WebExporter {
                         List<DefaultIconLink> defaults = model
                                 .attributeList(DefaultIconLink.class);
                         for (DefaultIconLink script : defaults) {
-                            if ((script.include.stringValue().equals(include) || script.include
-                                    .stringValue()
-                                    .toLowerCase(Locale.getDefault())
-                                    .equals("all"))
-                                    && script.instancesOf.stringValue().equals(
-                                            instancesOf)) {
+                            if ((script.include.stringValue().equals(include)
+                                    || script.include.stringValue()
+                                            .toLowerCase(Locale.getDefault())
+                                            .equals("all"))
+                                    && script.instancesOf.stringValue()
+                                            .equals(instancesOf)) {
                                 // Skip this default from the configuration.
                                 foundOverride = true;
                                 break;
@@ -1381,7 +1369,8 @@ WebExporter {
      *  @param content The content to add.
      */
 
-    private void _addContent(String position, boolean onceOnly, String content) {
+    private void _addContent(String position, boolean onceOnly,
+            String content) {
         List<StringBuffer> contents = _contents.get(position);
         if (contents == null) {
             contents = new LinkedList<StringBuffer>();
@@ -1545,8 +1534,8 @@ WebExporter {
                 // If a model is remote, then don't look for toc.htm.
                 if (!modelURI.getURI().toString().startsWith("file:")) {
                     System.out.println("Can't find toc: " + model.getFullName()
-                            + ": _uri is "
-                            + modelURI.getURI() + ", which does not start with \"file:\"");
+                            + ": _uri is " + modelURI.getURI()
+                            + ", which does not start with \"file:\"");
                     return "";
                 }
 
@@ -1559,7 +1548,8 @@ WebExporter {
                     if (!tocFile.exists()) {
                         File docDirectory = new File(modelFile.getParent(),
                                 "../../doc/");
-                        if (docDirectory.exists() && docDirectory.isDirectory()) {
+                        if (docDirectory.exists()
+                                && docDirectory.isDirectory()) {
                             tocFile = new File(docDirectory, "toc.htm");
                             if (!tocFile.exists()) {
                                 tocFile = new File(docDirectory, "toc.html");
@@ -1621,12 +1611,12 @@ WebExporter {
                 if (modelURIString.contains("/domains")) {
                     try {
                         File modelFile = new File(modelURI.getURI());
-                        File docDirectory = new File(modelFile, "../../../doc/");
-                        if (docDirectory.exists()
-                                && docDirectory.isDirectory()
-                                && (new File(docDirectory, "index.htm")
-                                        .exists() || new File(docDirectory,
-                                        "index.html").exists())) {
+                        File docDirectory = new File(modelFile,
+                                "../../../doc/");
+                        if (docDirectory.exists() && docDirectory.isDirectory()
+                                && (new File(docDirectory, "index.htm").exists()
+                                        || new File(docDirectory, "index.html")
+                                                .exists())) {
                             return true;
                         }
                     } catch (Throwable throwable) {
@@ -1701,9 +1691,9 @@ WebExporter {
      *  @param masterEffigy The top-level effigy for the modeling being exported.
      *  @param graphFrame The graph frame.
      */
-    private static void _openEntity(Entity entity,
-            Set<Tableau> tableauxToClose, Effigy masterEffigy,
-            BasicGraphFrame graphFrame) throws IllegalActionException {
+    private static void _openEntity(Entity entity, Set<Tableau> tableauxToClose,
+            Effigy masterEffigy, BasicGraphFrame graphFrame)
+            throws IllegalActionException {
         if (entity instanceof CompositeEntity) {
             _openComposite((CompositeEntity) entity, tableauxToClose,
                     masterEffigy, graphFrame);
